Adding evaluation methods for precision, recall, and fscore. All 99+ percent, fscore 99.7

--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuFq00zgorhw2jRr0V5RMj",
+      "authorship_tag": "ABX9TyNY21dpZhrcmlatr6BU3M93",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "zwkkSetusdVb"
       },
@@ -70,7 +70,7 @@
         "id": "Hjngr6X6sk7r",
         "outputId": "336f5799-0d6a-4b0b-cf81-cbd0d32137fa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,6 +80,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "LOrbZInp2lY5"
+      }
     },
     {
       "cell_type": "code",
@@ -108,8 +117,17 @@
       "metadata": {
         "id": "pEpjh6qgsoYf"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From Challenge 2 https://github.com/GreihMurray/NLP-2"
+      ],
+      "metadata": {
+        "id": "mgV1hD6F2nLO"
+      }
     },
     {
       "cell_type": "code",
@@ -125,8 +143,17 @@
       "metadata": {
         "id": "SyCX8WWu4Wis"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Combination of code from Challenge 2 (https://github.com/GreihMurray/NLP-2) and custom"
+      ],
+      "metadata": {
+        "id": "KBQf1D3z2uIw"
+      }
     },
     {
       "cell_type": "code",
@@ -167,8 +194,17 @@
       "metadata": {
         "id": "nzxivxza4ZKR"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Code from Challenge 2 & Dr. Scannell (https://github.com/GreihMurray/NLP-2, "
+      ],
+      "metadata": {
+        "id": "J1ZWGtZD21XD"
+      }
     },
     {
       "cell_type": "code",
@@ -200,60 +236,17 @@
       "metadata": {
         "id": "FVR17k8e4bxB"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "def calc_precision(preds, y_test):\n",
-        "    true_pos = 0\n",
-        "    false_pos = 0\n",
-        "\n",
-        "    for i in range(0, len(preds)):\n",
-        "        if str(preds[i]) == 'B' and str(y_test[i]) == 'B':\n",
-        "            true_pos += 1\n",
-        "        if str(preds[i]) == 'B' and str(y_test[i]) == 'I':\n",
-        "            false_pos += 1\n",
-        "\n",
-        "    if (true_pos + false_pos) == 0:\n",
-        "        return 0.01\n",
-        "\n",
-        "    precision = 100 * (true_pos / (true_pos + false_pos))\n",
-        "\n",
-        "    return precision"
+        "Original"
       ],
       "metadata": {
-        "id": "Y9m8uO1d-_KH"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def calc_recall(preds, y_test):\n",
-        "    true_pos = 0\n",
-        "    false_neg = 0\n",
-        "\n",
-        "    for i in range(0, len(preds)):\n",
-        "        if str(preds[i]) == 'B' and str(y_test[i]) == 'B':\n",
-        "            true_pos += 1\n",
-        "        if str(preds[i]) == 'I' and str(y_test[i]) == 'B':\n",
-        "            false_neg += 1\n",
-        "\n",
-        "    if true_pos + false_neg == 0:\n",
-        "        return 0\n",
-        "        \n",
-        "    recall = 100 * (true_pos / (true_pos + false_neg))\n",
-        "\n",
-        "    return recall"
-      ],
-      "metadata": {
-        "id": "KYP5sEdp_eg7"
-      },
-      "execution_count": 8,
-      "outputs": []
+        "id": "68ZgdUZK3ABg"
+      }
     },
     {
       "cell_type": "code",
@@ -265,8 +258,17 @@
       "metadata": {
         "id": "k_MUYsLr40jx"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "rZJnczhe3CiP"
+      }
     },
     {
       "cell_type": "code",
@@ -287,8 +289,17 @@
       "metadata": {
         "id": "-NtZSkDetvsB"
       },
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "c79gNMAf3EBZ"
+      }
     },
     {
       "cell_type": "code",
@@ -302,13 +313,26 @@
         "\n",
         "    new_model = load_model('/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/adamPoisson32_seq_model')\n",
         "\n",
-        "    eval_model(new_model, x, y)"
+        "    evals = new_model.evaluate(x, y)\n",
+        "\n",
+        "    print('Accuracy: ', (evals[1] * 100))\n",
+        "\n",
+        "    custom_eval(new_model, x, y)"
       ],
       "metadata": {
         "id": "hvLR537CzpQg"
       },
-      "execution_count": 209,
+      "execution_count": 276,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "huJK3T_T3FtW"
+      }
     },
     {
       "cell_type": "code",
@@ -357,8 +381,169 @@
       "metadata": {
         "id": "JvMIudG_2Zv-"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "Pf3yr4043Hs7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def undo_encode_y(y):\n",
+        "    all_tags = []\n",
+        "\n",
+        "    word2index = {}\n",
+        "    tag2index = {}\n",
+        "\n",
+        "    with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2index.json\") as infile:\n",
+        "          word2index = json.load(infile)  \n",
+        "\n",
+        "    with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2index.json\") as outfile:\n",
+        "          tag2index = json.load(outfile)\n",
+        "\n",
+        "    for tags in y:\n",
+        "        cur_tags = []\n",
+        "        for tag in tags:\n",
+        "            if round(tag[0]) == 1:\n",
+        "                cur_tags.append('I')\n",
+        "            elif round(tag[1]) == 1:\n",
+        "                cur_tags.append('B')\n",
+        "            else:\n",
+        "                continue\n",
+        "\n",
+        "        all_tags.append(''.join(cur_tags))\n",
+        "\n",
+        "    return all_tags"
+      ],
+      "metadata": {
+        "id": "u3ZQii5qtmgl"
+      },
+      "execution_count": 262,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "TLJAlt3D3J6h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_precision(preds, y_test):\n",
+        "    true_pos = 0\n",
+        "    false_pos = 0\n",
+        "\n",
+        "    for i in range(0, len(preds)):\n",
+        "        for j in range(0, len(preds[i])):\n",
+        "            if preds[i][j] == 'I' and y_test[i][j] == 'I':\n",
+        "                true_pos += 1\n",
+        "            if preds[i][j] == 'I' and y_test[i][j] == 'B':\n",
+        "                false_pos += 1\n",
+        "\n",
+        "    if (true_pos + false_pos) == 0:\n",
+        "        return 0.01\n",
+        "\n",
+        "    precision = 100 * (true_pos / (true_pos + false_pos))\n",
+        "\n",
+        "    return precision"
+      ],
+      "metadata": {
+        "id": "Y9m8uO1d-_KH"
+      },
+      "execution_count": 272,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "L47S6Rz93Ldb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_recall(preds, y_test):\n",
+        "    true_pos = 0\n",
+        "    false_neg = 0\n",
+        "\n",
+        "    for i in range(0, len(preds)):\n",
+        "        for j in range(0, len(preds[i])):\n",
+        "            if preds[i][j] == 'I' and y_test[i][j] == 'I':\n",
+        "                true_pos += 1\n",
+        "            if preds[i][j] == 'B' and y_test[i][j] == 'I':\n",
+        "                false_neg += 1\n",
+        "\n",
+        "    if true_pos + false_neg == 0:\n",
+        "        return 0\n",
+        "        \n",
+        "    recall = 100 * (true_pos / (true_pos + false_neg))\n",
+        "\n",
+        "    return recall"
+      ],
+      "metadata": {
+        "id": "KYP5sEdp_eg7"
+      },
+      "execution_count": 270,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "5q2qzQH_3NqW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def custom_eval(model, x, y):\n",
+        "    preds = model.predict(x)\n",
+        "\n",
+        "    preds = undo_encode_y(preds)\n",
+        "    y_clean = undo_encode_y(y)\n",
+        "\n",
+        "    prec = calc_precision(preds, y_clean)\n",
+        "\n",
+        "    print(\"Precision: \", prec)\n",
+        "\n",
+        "    recall = calc_recall(preds, y_clean)\n",
+        "\n",
+        "    print(\"Recall: \", recall)\n",
+        "\n",
+        "    fscore = (2 * (prec * recall)) / (prec + recall)\n",
+        "\n",
+        "    print(\"Fscore: \", fscore)"
+      ],
+      "metadata": {
+        "id": "fIO2cOGUs9Ma"
+      },
+      "execution_count": 278,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "CwJvFEFG3PvU"
+      }
     },
     {
       "cell_type": "code",
@@ -389,8 +574,17 @@
       "metadata": {
         "id": "Q67tirhiFCSp"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "dfQnyMBn3RVK"
+      }
     },
     {
       "cell_type": "code",
@@ -402,28 +596,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jJslV8Ryz3R2",
-        "outputId": "7486fad7-53a6-4697-e4e5-bce3018f3735"
+        "outputId": "81246413-cf10-41f1-dc20-d5cd4d0b0049"
       },
-      "execution_count": 205,
+      "execution_count": 279,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Reading data...: 12812it [00:00, 164230.66it/s]\n"
+            "Reading data...: 12812it [00:00, 73699.33it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'dict'>\n",
-            "<class 'dict'>\n",
-            "401/401 [==============================] - 6s 13ms/step - loss: 0.3799 - accuracy: 0.9794\n",
-            "[0.37994199991226196, 0.9793943166732788]\n"
+            "401/401 [==============================] - 5s 12ms/step - loss: 0.3335 - accuracy: 0.9998\n",
+            "Accuracy:  99.9809205532074\n",
+            "Precision:  99.93399339933994\n",
+            "Recall:  99.50052576235542\n",
+            "Fscore:  99.71678851346901\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "HQyTtVkr3SzM"
+      }
     },
     {
       "cell_type": "code",
@@ -437,7 +641,7 @@
         "id": "Nn5J86L8uH9u",
         "outputId": "bdaada05-e536-4748-9d3f-b9a33d1d4b29"
       },
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
